--- a/lotto-extractor/src/main/resources/application.properties
+++ b/lotto-extractor/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=lottotech-extractor
 
+lottotech:
+    tirage:
+        url: https://loterienationale.mu/fr/tirages-et-archives
+        param: field_date_du_tirage_value[value][date]
