--- a/lotto-extractor/build.gradle
+++ b/lotto-extractor/build.gradle
@@ -20,7 +20,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-activemq'
     implementation 'org.jsoup:jsoup:1.14.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.12.5'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.5'
+    implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.5'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
