Connected to active mq Created controller to launch extractor via api Created scheduler Decouple application file into various profiles Updated extractor Added global handler for controller exception

--- a/lotto-extractor/build.gradle
+++ b/lotto-extractor/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation("org.springframework.boot:spring-boot-starter-web")
     implementation 'org.springframework.boot:spring-boot-starter-activemq'
     implementation 'org.jsoup:jsoup:1.14.2'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.12.5'
