--- a/lotto-activemq/src/main/docker/DockerFile
+++ b/lotto-activemq/src/main/docker/DockerFile
@@ -1,10 +1,9 @@
-#Adapted from https://github.com/rmohr/docker-activemq.git
+FROM openjdk:8-jre-alpine
 
-FROM openjdk:11-jre-slim
-
-ENV ACTIVE_MQ_VERSION 5.15.9
-ENV ACTIVEMQ apache-activemq-$ACTIVE_MQ_VERSION
+ENV ACTIVEMQ_VERSION 5.15.9
+ENV ACTIVEMQ apache-activemq-$ACTIVEMQ_VERSION
 ENV ACTIVEMQ_TCP=61616 ACTIVEMQ_AMQP=5672 ACTIVEMQ_STOMP=61613 ACTIVEMQ_MQTT=1883 ACTIVEMQ_WS=61614 ACTIVEMQ_UI=8161
+ENV SHA512_VAL=35cae4258e38e47f9f81e785f547afc457fc331d2177bfc2391277ce24123be1196f10c670b61e30b43b7ab0db0628f3ff33f08660f235b7796d59ba922d444f
 
 ENV ACTIVEMQ_HOME /opt/activemq
 
@@ -12,14 +11,22 @@ COPY conf/* $ACTIVEMQ_HOME-default/conf/
 
 RUN set -x && \
     mkdir -p /opt && \
-    apt-get update  && \
-    apt-get install -y curl && \
-    curl -s -S https://archive.apache.org/dist/activemq/$ACTIVEMQ_VERSION/$ACTIVEMQ-bin.tar.gz | tar xvz -C /opt && \
+    apk --update add --virtual build-dependencies curl && \
+    curl https://archive.apache.org/dist/activemq/$ACTIVEMQ_VERSION/$ACTIVEMQ-bin.tar.gz -o $ACTIVEMQ-bin.tar.gz
+
+# Validate checksum
+RUN if [ "$SHA512_VAL" != "$(sha512sum $ACTIVEMQ-bin.tar.gz | awk '{print($1)}')" ];\
+    then \
+        echo "sha512 values doesn't match! exiting."  && \
+        exit 1; \
+    fi;
+
+RUN tar xzf $ACTIVEMQ-bin.tar.gz -C  /opt && \
     ln -s /opt/$ACTIVEMQ $ACTIVEMQ_HOME && \
-    cp $ACTIVEMQ_HOME-default/conf/* $ACTIVEMQ_HOME/conf &&\
-    groupadd --system activemq && useradd --system -M -g activemq -d $ACTIVEMQ_HOME activemq && \
+    addgroup -S activemq && adduser -S -H -G activemq -h $ACTIVEMQ_HOME activemq && \
     chown -R activemq:activemq /opt/$ACTIVEMQ && \
     chown -h activemq:activemq $ACTIVEMQ_HOME && \
+    apk del build-dependencies && \
     rm -rf /var/cache/apk/*
 
 USER activemq
