Update gradle to cater for maven local

--- a/lotto-extractor/src/main/resources/application.yaml
+++ b/lotto-extractor/src/main/resources/application.yaml
@@ -19,4 +19,7 @@ messaging:
 extractor:
     scheduler:
         cron: 0 0 * * THU,SUN
-        launch-on-startup: false
+        launch-on-startup: true
+
+server:
+    port: 8080
