--- a/lotto-extractor/build.gradle
+++ b/lotto-extractor/build.gradle
@@ -16,6 +16,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
@@ -28,7 +29,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.5'
 
     compileOnly 'org.projectlombok:lombok'
-    compileOnly files('libs/lotto-library-1.0-plain.jar')
+    compileOnly 'mu.yanesh:lotto-library:1.0.0'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
