--- a/lotto-extractor/build.gradle
+++ b/lotto-extractor/build.gradle
@@ -32,7 +32,10 @@ dependencies {
     compileOnly 'mu.yanesh:lotto-library:1.0.0'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
