Add new endpoint

--- a/lotto-auth-server/build.gradle
+++ b/lotto-auth-server/build.gradle
@@ -20,6 +20,12 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.jboss.resteasy:resteasy-jackson2-provider:5.0.1.Final'
+    implementation 'org.keycloak:keycloak-dependencies-server-all:15.0.2'
+    runtimeOnly 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
