--- a/lotto-extractor/build.gradle
+++ b/lotto-extractor/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.12.5'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.5'
     implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.5'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
     compileOnly 'org.projectlombok:lombok'
     compileOnly 'mu.yanesh:lotto-library:1.0.0'
