--- a/lotto-analyser/build.gradle
+++ b/lotto-analyser/build.gradle
@@ -16,13 +16,22 @@ configurations {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-activemq'
+
+    implementation 'com.github.dpaukov:combinatoricslib3:3.3.0'
     compileOnly 'org.projectlombok:lombok'
+    compileOnly 'mu.yanesh:lotto-library:1.0.0'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'mu.yanesh:lotto-library:1.0.0'
+
 }
 
 tasks.named('test') {
