Configure lotto-api-gateway as eureka client

--- a/lotto-api-gateway/src/main/resources/application.yaml
+++ b/lotto-api-gateway/src/main/resources/application.yaml
@@ -5,4 +5,11 @@ spring:
     gateway:
       routes:
         id: lotto-api
-        url: http://localhost:8765/eureka
+        url: http://localhost:8761/eureka
+        
+server:
+  port: 0
+  
+eureka:
+  instance:
+    instance-id: ${spring.application.name}
