--- a/lotto-api-gateway/src/main/resources/application.yaml
+++ b/lotto-api-gateway/src/main/resources/application.yaml
@@ -4,12 +4,18 @@ spring:
   cloud:
     gateway:
       routes:
-        id: lotto-api
-        url: http://localhost:8761/eureka
+        - id: lotto-api
+          uri: lb://lotto-api
+          predicates:
+            - Path=/api/1.0/tirage/**
         
 server:
-  port: 0
+  port: 9000
   
 eureka:
   instance:
     instance-id: ${spring.application.name}
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
