--- a/lotto-analyser/build.gradle
+++ b/lotto-analyser/build.gradle
@@ -19,12 +19,17 @@ repositories {
     mavenLocal()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.3"
+    }
+}
+
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-activemq'
-
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'com.github.dpaukov:combinatoricslib3:3.3.0'
     compileOnly 'org.projectlombok:lombok'
     compileOnly 'mu.yanesh:lotto-library:1.0.0'
