Configure lotto extractor to eureka

--- a/lotto-extractor/src/main/resources/application.yaml
+++ b/lotto-extractor/src/main/resources/application.yaml
@@ -28,4 +28,11 @@ extractor:
         launch-on-startup: true
 
 server:
-    port: 8200
+    port: 0
+    
+eureka:
+    client:
+        service-url:
+            defaultZone: http://localhost:8761/eureka
+    instance:
+        instance-id: ${spring.application.name}
