--- a/lotto-environment/docker-compose.yaml
+++ b/lotto-environment/docker-compose.yaml
@@ -1,26 +1,50 @@
-version: '3'
+version: '3.8'
+
+volumes:
+  rabbitmq_data:
+    driver: local
+  mongodb_data:
+    driver: local
+
 services:
-  activemq:
-    image: yanesh10/lotto-activemq:1.0.local
+  rabbitmq:
+    image: rabbitmq:${RABBITMQ_VERSION}
+    container_name: lotto-rabbitmq
+    hostname: rabbitmq
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq/mnesia/
+    networks:
+      lotto:
+        aliases:
+          - rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: rabbitAdminUser
+      RABBITMQ_DEFAULT_PASS: rabbitAdminPwd
+    restart: unless-stopped
     ports:
-    - 8161:8161
-    - 61616:61616
-    - 61613:61613
+      - 5672:5672
+      - 15672:15672
     
   mongodb:
     image: mongo:3.6.2
+    container_name: lotto-mongodb
     ports:
       - 27017-27019:27017-27019
     volumes:
       - ./mongo-data:/data/mongo
+    networks:
+      lotto:
+          aliases:
+          - mongodb
+    restart: unless-stopped
 
-  zookeeper-1:
-    image: confluentinc/cp-zookeeper:latest
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - 22181:2181
+#  zookeeper-1:
+#    image: confluentinc/cp-zookeeper:latest
+#    environment:
+#      ZOOKEEPER_CLIENT_PORT: 2181
+#      ZOOKEEPER_TICK_TIME: 2000
+#    ports:
+#      - 22181:2181
 
 #  zookeeper-2:
 #    image: confluentinc/cp-zookeeper:latest
@@ -30,19 +54,19 @@ services:
 #    ports:
 #      - 32181:2181
 
-  kafka-1:
-    image: confluentinc/cp-kafka:latest
-    depends_on:
-      - zookeeper-1
-    ports:
-      - 29092:29092
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+#  kafka-1:
+#    image: confluentinc/cp-kafka:latest
+#    depends_on:
+#      - zookeeper-1
+#    ports:
+#      - 29092:29092
+#    environment:
+#      KAFKA_BROKER_ID: 1
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181
+#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+#      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
 #  kafka-2:
 #    image: confluentinc/cp-kafka:latest
@@ -58,3 +82,7 @@ services:
 #      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
 #      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
 #      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+networks:
+  lotto:
+    name: lotto
